--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -31,7 +31,7 @@
 
 %http://andrewaustin.com/an-overview-of-angularjs-for-managers/
 @misc{angularjsoverview,
-  title = {An Overvi of AngularJS for Managers},
+  title = {An Overview of AngularJS for Managers},
   howpublished = {\url{http://andrewaustin.com/an-overview-of-angularjs-for-managers}},
   note = {Accessed: 2017-03-20},
   author = {Austin, Andrew}
