--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -270,7 +270,7 @@ One of AngularJS's benefits is that its developers have carefully
 \input{figures/frontend_ng_cli}
 
 %==============================================================================
-\section{Backend Technology Considerations} %1-3 pages
+\section{Backend Technology} %1-3 pages
 \label{sec:backend}
 
 As with the frontend, our clients defined what technology they wanted the team
@@ -746,7 +746,7 @@ To maintain the close communication with our client, as dictated by
  to both design and implementation.
 
 %==============================================================================
-\section{Change Management and Version Control Methods}
+\section{Change Management and Version Control}
 \label{sec:changemgmt}
 
 At the very start of the project, we used a shared Google Docs folder
@@ -837,7 +837,7 @@ Ultimately, for a branch to be merged into \texttt{dev}, it had to meet 3 criter
 On merge, the issue ticket was closed, the new code merged into \texttt{dev}
  and the feature branch being deleted. This meant that the repository was not 
  cluttered with old branches. With over 130 branches merged, this would have been
- a considerable number of branches
+ a considerable number of branches.
 
 Encountering some issues with the workflow of GitLab was unavoidable.
  For example, if a feature branch was not being worked on for some time,
