[158] Consistent spelling in figure captions

--- a/Documentation/Dissertation/figures/cicd_failed_pipeline.tex
+++ b/Documentation/Dissertation/figures/cicd_failed_pipeline.tex
@@ -2,6 +2,6 @@
 \begin{center}
 \includegraphics[width=9cm]{figures/cicd_failed_pipeline}
 \end{center}
-\caption{Example of a failed pipeline in gitlab}
+\caption{Example of a failed pipeline in GitLab}
 \label{fig:cicd_failed_pipeline}
 \end{figure}
