--- a/Documentation/Dissertation/figures/frontend_components.tex
+++ b/Documentation/Dissertation/figures/frontend_components.tex
@@ -2,6 +2,6 @@
 \begin{center}
 \includegraphics[width=7cm]{figures/frontend_components}
 \end{center}
-\caption{A selection of components used in the GRNFanzone}
+\caption{A selection of components used in the GRN FanZone}
 \label{fig:frontend_components}
 \end{figure}
