--- a/Documentation/Dissertation/figures/planning_milestones.tex
+++ b/Documentation/Dissertation/figures/planning_milestones.tex
@@ -2,6 +2,6 @@
 \begin{center}
 \includegraphics[width=15cm]{figures/planning_milestones}
 \end{center}
-\caption{Project milestones on Gitlab}
+\caption{Project milestones on GitLab}
 \label{fig:planning_milestones}
 \end{figure}
