--- a/Documentation/Dissertation/figures/testing_coverage_metrics.tex
+++ b/Documentation/Dissertation/figures/testing_coverage_metrics.tex
@@ -2,6 +2,6 @@
 \begin{center}
 \includegraphics[width=11cm]{figures/testing_coverage_metrics}
 \end{center}
-\caption{The html report on code coverage}
+\caption{The HTML report on code coverage}
 \label{fig:testing_coverage_metrics}
 \end{figure}
