[158] Added info about retrospectives

--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -632,15 +632,6 @@ GitLab allowed us to create project milestones. Each of them had some
  of each iteration would also appear on each issue, becoming bright red as the
  date came nearer, to alert the person assigned to the task.
 
-Throughout the project, our process was modified and improved by having team
- retrospectives around the end of each iteration. The format of the retrospectives
- consisted of every team member going through what they thought went well in
- our past iteration, what they thought went bad and what ideas they have to
- improve our workflow in future iterations. All these were discussed within
- the team and what the majority considered useful ideas were then included
- in the further development. The main points of each retrospective are
- documented on the wiki page of the project, which can be found on GitLab.
-
 %==============================================================================
 \section{Agile Methodology} %1-3 pages
 \label{sec:agile}
@@ -690,6 +681,20 @@ As Agile development was highly recommended as part of our software development
   Master would also take into consideration any complaints or suggestions from
   the rest of the team, as well as initiate team retrospectives at the end of
   each sprint.
+  
+The format of the retrospectives
+ consisted of every team member going through what they thought went well in
+ our past iteration, what they thought went bad and what ideas they have to
+ improve our workflow in future iterations. All these were discussed within
+ the team and what the majority considered useful ideas were then included
+ in the further development. The main points of each retrospective are
+ documented on the wiki page of the project, which can be found on GitLab. One
+ example of a point raised at a retrospective was that tickets were not being 
+ created with enough detail. In response to this, the Product Owner spent more
+ time ensuring that the tickets were detailed. After some reading, it was discovered
+ that it was possible to prepare templates for issues, and these were then incorporated
+ into the software process. The retrospectives helped us air any issues we had 
+ and helped us be a better functioning team.
 
  As the project progressed, our Scrum process underwent a few changes. Once
  the desired goals and the predicted timelines were better defined, it was
@@ -853,6 +858,7 @@ Encountering some issues with the workflow of GitLab was unavoidable.
 
 
 %==============================================================================
+\newpage
 \section{Conclusions} %1-2 pages
 \label{sec:conclusion}
 
