[158] Mentioned branch labelling on commits

--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -695,6 +695,13 @@ The format of the retrospectives
  that it was possible to prepare templates for issues, and these were then incorporated
  into the software process. The retrospectives helped us air any issues we had 
  and helped us be a better functioning team.
+ 
+Another part of the software process we changed followed the review of 
+ software practices with the lab helpers. They suggested we prefix our commits
+ with the branch number they were committed on, so that should we migrate
+ to a new VCS we would still know which commits followed from where. This
+ was implemented (barring forgetful moments) by most members of the team
+ towards the end of the project.
 
  As the project progressed, our Scrum process underwent a few changes. Once
  the desired goals and the predicted timelines were better defined, it was
